--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     
     <h1>Javascript</h1>
 
-    <script src="clases.js"></script>
+    <button id="btn_agregar">Agregar</button>
+    <button id="btn_agregar2">Agregar muchos</button>
+    
+    <div id="agregar_archivo"></div>
+    <hr>
+    <div id="agregar_archivo_varios"></div>
+
+    <script src="ajax/ajax_json.js"></script>
 </body>
 </html>
