--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <hr>
     <div id="agregar_archivo_varios"></div>
 
-    <script src="ajax/ajax_json.js"></script>
+    <script src="asyncAwait.js"></script>
 </body>
 </html>
