--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="agregar_archivo"></div>
     <hr>
     <div id="agregar_archivo_varios"></div>
+    
 
-    <script src="asyncAwait.js"></script>
+    <script src="regext.js"></script>
 </body>
 </html>
