--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <div id="agregar_archivo_varios"></div>
     
 
-    <script src="regext.js"></script>
+    <script src="JSAvanzado.js"></script>
 </body>
 </html>
