--- a/webpack/index.html
+++ b/webpack/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="dist/main.js"></script>
+    <h1>Modulo webpack</h1>
+    <script src="dist/index.bundle.js"></script>
+    <script src="dist/nosotros.bundle.js"></script>
 </body>
 </html>
